<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.attendify.ui.home.HomeFragment"
        android:label="@string/title_home">
        <action
            android:id="@+id/action_home_to_profile"
            app:destination="@id/navigation_profile" />
    </fragment>

    <fragment
        android:id="@+id/navigation_attendance"
        android:name="com.example.attendify.ui.attendance.AttendanceFragment"
        android:label="@string/title_attendance" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.attendify.ui.profile.ProfileFragment"
        android:label="@string/title_profile" />

    <fragment
        android:id="@+id/navigation_reports"
        android:name="com.example.attendify.ui.admin.ReportsFragment"
        android:label="@string/title_reports" />

</navigation> 